Fix overflow-x issue for Firefox browser

--- a/styles/mockup/mockup.css
+++ b/styles/mockup/mockup.css
@@ -1,5 +1,5 @@
 body {
-  /* max-width: 1920px; */
+  overflow-x: hidden;
   margin-left: auto;
   margin-right: auto;
   font: normal 16px/1.5 'Monteserrat',
